commit inicial de trolleyes from blogbuster

--- a/app/homeTemplate.html
+++ b/app/homeTemplate.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col-md-12">
-      <h1>BLOGBUSTER: el blog de DAW</h1>
+      <h1>trollEYES: la tienda de DAW</h1>
     </div>
   </div>
 
