--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="BlogBusterApp">
+<html lang="en" ng-app="trollEYESApp">
 
 <head>
   <meta charset="UTF-8">
