--- a/app/footer.html
+++ b/app/footer.html
@@ -1,5 +1,5 @@
 <footer class="footer mt-auto py-3">
     <div class="container text-center">
-        <span class="text-muted">Copyright &copy; BLOGBUSTER está disponible en código abierto.</span>
+        <span class="text-muted">Copyright &copy; TROLLEYES está disponible en código abierto.</span>
     </div>
 </footer>
