--- a/app/usuario/logout/logout.html
+++ b/app/usuario/logout/logout.html
@@ -5,7 +5,7 @@
         <div class="colmd-5 mx-auto">
             <div class="card rounded-5" ng-show="!fallo">
                 <div class="card-header">
-                    <h4 class="mb-0">BlogBuster: Salida del sistema</h4>
+                    <h4 class="mb-0">trollEYES: Salida del sistema</h4>
                 </div>
                 <div class="card-body">
                     <h3 class="login-title">Has salido correctamente del sistema.</span></h3>
