--- a/app/menu.html
+++ b/app/menu.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class=" navbar navbar-expand-lg navbar-light bg-light">
   <a class="navbar-brand" href="#!/home">TrollEYES</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
     aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -6,14 +6,14 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
-      <li class="nav-item" ng-show="authStatus==200" ng-class="{'active':(controller=='postPlistController')}">
-        <a class="nav-link" href="#!/post/plist/10/1">Listado de posts</a>
+      <li class="nav-item" ng-show="authStatus==200" ng-class="{'active':(controller=='productoPlistController')}">
+        <a class="nav-link" href="#!/producto/plist/10/1">Listado de productos</a>
       </li>
-      <li class="nav-item" ng-show="authStatus==200" ng-class="{'active':(controller=='postNewController')}">
-        <a class="nav-link" href="#!/post/new">Nuevo post</a>
+      <li class="nav-item" ng-show="authStatus==200" ng-class="{'active':(controller=='productoNewController')}">
+        <a class="nav-link" href="#!/producto/new">Nuevo producto</a>
       </li>
-      <li class="nav-item" ng-show="authStatus==200" ng-class="{'active':(controller=='postFillController')}">
-        <a class="nav-link" href="#!/post/fill">Creación masiva aleatoria de posts</a>
+      <li class="nav-item" ng-show="authStatus==200" ng-class="{'active':(controller=='productoFillController')}">
+        <a class="nav-link" href="#!/producto/fill">Creación masiva aleatoria de productos</a>
       </li>
     </ul>
     <div class="collapse navbar-collapse justify-content-end" id="navbarNavDropdown">
@@ -23,7 +23,7 @@
               class="fas fa-sign-in-alt"></i></a>
         </li>
         <li class="nav-item" ng-show="authStatus==200">
-          <span class="nav-link">Usuario: {{authUsername}}</span>
+          <span class="nav-link">Usuari: {{authUsername.nombre+" "+authUsername.apellido1+" "+authUsername.apellido2}}</span>
         </li>
         <li class="nav-item" ng-show="authStatus==200">
           <a class="nav-link" ng-class="{'active': sitio=='logout'}" href="#!/logout">Cerrar Sesión <i
