--- a/index.html
+++ b/index.html
@@ -36,14 +36,14 @@
   <script src="config/promesasService.js"></script>
   <script src="config/routes.js"></script>
   <script src="app/homeController.js"></script>
-  <script src="app/post/plist/plist.js"></script>
-  <script src="app/post/remove/remove.js"></script>
-  <script src="app/post/view/view.js"></script>
-  <script src="app/post/edit/edit.js"></script>
-  <script src="app/post/new/new.js"></script>
+  <script src="app/producto/plist/plist.js"></script>
+  <script src="app/producto/remove/remove.js"></script>
+  <script src="app/producto/view/view.js"></script>
+  <script src="app/producto/edit/edit.js"></script>
+  <script src="app/producto/new/new.js"></script>
   <script src="app/usuario/login/login.js"></script>
   <script src="app/usuario/logout/logout.js"></script>
-  <script src="app/post/fill/fill.js"></script>
+  <script src="app/producto/fill/fill.js"></script>
 </head>
 
 <body>
