--- a/index.html
+++ b/index.html
@@ -41,16 +41,17 @@
   <script src="app/producto/view/view.js"></script>
   <script src="app/producto/edit/edit.js"></script>
   <script src="app/producto/new/new.js"></script>
+  <script src="app/producto/fill/fill.js"></script>
   <script src="app/usuario/login/login.js"></script>
   <script src="app/usuario/logout/logout.js"></script>
-  <script src="app/producto/fill/fill.js"></script>
   <script src="app/usuario/plist/plist.js"></script>
   <script src="app/usuario/remove/remove.js"></script>
   <script src="app/usuario/view/view.js"></script>
   <script src="app/usuario/edit/edit.js"></script>
   <script src="app/usuario/new/new.js"></script>
   <script src="app/usuario/fill/fill.js"></script>
-
+  <script src="app/carrito/view/carrito.js"></script>
+  <script src="app/carrito/comprar/comprar.js"></script>
 </head>
 
 <body>
