--- a/index.html
+++ b/index.html
@@ -52,6 +52,24 @@
   <script src="app/usuario/fill/fill.js"></script>
   <script src="app/carrito/view/carrito.js"></script>
   <script src="app/carrito/comprar/comprar.js"></script>
+  <script src="app/compra/plist/plist.js"></script>
+  <script src="app/compra/remove/remove.js"></script>
+  <script src="app/compra/view/view.js"></script>
+  <script src="app/compra/edit/edit.js"></script>
+  <script src="app/compra/new/new.js"></script>
+  <script src="app/compra/fill/fill.js"></script>
+    <script src="app/factura/plist/plist.js"></script>
+  <script src="app/factura/remove/remove.js"></script>
+  <script src="app/factura/view/view.js"></script>
+  <script src="app/factura/edit/edit.js"></script>
+  <script src="app/factura/new/new.js"></script>
+  <script src="app/factura/fill/fill.js"></script>
+     <script src="app/tipo_producto/plist/plist.js"></script>
+  <script src="app/tipo_producto/remove/remove.js"></script>
+  <script src="app/tipo_producto/view/view.js"></script>
+  <script src="app/tipo_producto/edit/edit.js"></script>
+  <script src="app/tipo_producto/new/new.js"></script>
+  <script src="app/tipo_producto/fill/fill.js"></script>
 </head>
 
 <body>
