--- a/app/compra/plist/plist.html
+++ b/app/compra/plist/plist.html
@@ -2,14 +2,14 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Listado de usuario</h1>
+      <h1>Listado de compra</h1>
       <div class="row">
         <div class="col">
           <nav aria-label="Paginación">
             <ul class="pagination">
               <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
                 ng-repeat="p in botonera track by $index">
-                <a class="page-link" ng-if="p != '...'" href="#!/usuario/plist/{{ rppActual }}/{{ p }}">{{ p }}</a>
+                <a class="page-link" ng-if="p != '...'" href="#!/compra/plist/{{ rppActual }}/{{ p }}">{{ p }}</a>
                 <span class="page-link" ng-if="p == '...'">{{ p }}</span>
               </li>
             </ul>
@@ -19,7 +19,7 @@
           <nav aria-label="Registros por página">
             <ul class="pagination float-right">
               <li class="page-item" ng-class="{'active':(rppActual==r)}" ng-repeat="r in rppS">
-                <a class="page-link" href="#!/usuario/plist/{{ r }}/1">{{ r }}</a>
+                <a class="page-link" href="#!/compra/plist/{{ r }}/1">{{ r }}</a>
               </li>
             </ul>
           </nav>
@@ -28,30 +28,22 @@
       <table class="table">
         <tr>
           <th>Id</th>
-          <th>Dni</th>
-          <th>Nombre</th>
-          <th>Primer Apellido</th>
-          <th>Segundo Apellido</th>
-          <th>Nombre de Usuario</th>
-          <th>Email</th>
-          <th>Tipo de Usuario</th>
-
+          <th>Cantidad</th>
+          <th>Producto</th>
+          <th>Factura</th>
           <th>Acciones</th>
         </tr>
         <tr ng-repeat="fila in pagina">
           <td>{{ fila.id }}</td>
-          <td>{{ fila.dni }}</td>
-          <td>{{ fila.nombre }}</td>
-          <td>{{ fila.apellido1 }}</td>
-          <td>{{ fila.apellido2 }}</td>
-          <td>{{ fila.login }}</td>
-          <td>{{fila.email}}</td>
-          <td>{{fila.tipo_usuario_obj.descripcion}}</td>
+          <td>{{ fila.cantidad }}</td>
+          <td>{{ fila.producto_obj.descripcion }}</td>
+          <td>{{ fila.factura_obj.id }}</td>
+         
           <td>
             <div class="btn-group" role="group" aria-label="Basic example">
-              <a class="btn btn-secondary" href="#!/usuario/view/{{ fila.id }}"><i class="fas fa-eye"></i></a>
-              <a class="btn btn-secondary" href="#!/usuario/edit/{{ fila.id }}"><i class="fas fa-edit"></i></a>
-              <a class="btn btn-secondary" href="#!/usuario/remove/{{ fila.id }}"><i class="fas fa-trash-alt"></i></a>
+              <a class="btn btn-secondary" href="#!/compra/view/{{ fila.id }}"><i class="fas fa-eye"></i></a>
+              <a class="btn btn-secondary" href="#!/compra/edit/{{ fila.id }}"><i class="fas fa-edit"></i></a>
+              <a class="btn btn-secondary" href="#!/compra/remove/{{ fila.id }}"><i class="fas fa-trash-alt"></i></a>
             </div>
           </td>
         </tr>
@@ -61,7 +53,7 @@
         <ul class="pagination">
           <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
             ng-repeat="p in botonera track by $index">
-            <a class="page-link" ng-if="p != '...'" href="#!/usuario/plist/{{ rppActual }}/{{ p }}">{{ p }}
+            <a class="page-link" ng-if="p != '...'" href="#!/compra/plist/{{ rppActual }}/{{ p }}">{{ p }}
             </a>
             <span class="page-link" ng-if="p == '...'">{{ p }}</span>
           </li>
