--- a/app/usuario/remove/remove.html
+++ b/app/usuario/remove/remove.html
@@ -8,30 +8,42 @@
                 <div class="alert alert-success" role="alert" ng-if="!fallido">El usuario se ha borrado con exito</div>
             </div>
             <table class="table table-bordered table-hover" ng-show="!hecho">
-                <tr>
-                    <th> Campo </th>
-                    <th> Valor </th>
-                </tr>
-                <tr>
-                    <th> Id: </th>
-                    <td> {{id}} </td>
-                </tr>
-                <tr>
-                    <th> Titulo: </th>
-                    <td> {{titulo}} </td>
-                </tr>
-                <tr>
-                    <th> Cuerpo: </th>
-                    <td> {{cuerpo}} </td>
-                </tr>
-                <tr>
-                    <th> Etiquetas: </th>
-                    <td> {{etiquetas}} </td>
-                </tr>
-                <tr>
-                    <th> Fecha: </th>
-                    <td> {{fecha | stringToDate | date : "dd/MM/yyyy"}} </td>
-                </tr>
+                    <tr>
+                            <th> Campo </th>
+                            <th> Valor </th>
+                        </tr>
+                        <tr>
+                            <th> Id: </th>
+                            <td> {{id}} </td>
+                        </tr>
+                        <tr>
+                            <th> Dni: </th>
+                            <td> {{dni}} </td>
+                        </tr>
+                        <tr>
+                            <th> Nombre: </th>
+                            <td> {{nombre}} </td>
+                        </tr>
+                        <tr>
+                            <th> Primer apellido: </th>
+                            <td> {{apellido1}} </td>
+                        </tr>
+                        <tr>
+                            <th> Segundo apellido: </th>
+                            <td> {{apellido2}} </td>
+                        </tr>
+                        <tr>
+                            <th> Nombre de Usuario: </th>
+                            <td> {{login}} </td>
+                        </tr> 
+                        <tr>
+                            <th> Email: </th>
+                            <td> {{email}} </td>
+                        </tr> 
+                        <tr>
+                                <th>Tipo de Usuario</th>
+                                <td> {{tipo_usuario_obj.descripcion}} </td>
+                            </tr> 
             </table>
 
             <div class="float-right">
