Iconos y facturas usuario

--- a/app/factura/new/new.html
+++ b/app/factura/new/new.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Crear un Factura</h1>
+      <h1><i class="far fa-file"></i> Crear un Factura</h1>
       <form name="userForm" ng-show="!fallo&&!hecho">
          
             <div class="form-group row">
