--- a/app/factura/remove/remove.html
+++ b/app/factura/remove/remove.html
@@ -2,7 +2,7 @@
 <div class="container">
     <div class="row">
         <div class="col">
-            <h1 class="mb-4">Borrado de factura</h1>
+            <h1 class="mb-4"><i class="fas fa-trash-alt"></i> Borrado de factura</h1>
             <div ng-if="hecho">
                 <div class="alert alert-danger" role="alert" ng-if="fallido">No se ha podido borrar el factura</div>
                 <div class="alert alert-success" role="alert" ng-if="!fallido">El factura se ha borrado con exito</div>
