--- a/app/producto/new/new.html
+++ b/app/producto/new/new.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Crear un Producto</h1>
+      <h1><i class="far fa-file"></i> Crear un Producto</h1>
       <form name="userForm" ng-show="!fallo&&!hecho">
         <div class="form-group row">
           <label for="descripcion" class="col-sm-2 col-form-label">Descripcion:</label>
