--- a/app/usuario/fill/fill.html
+++ b/app/usuario/fill/fill.html
@@ -4,7 +4,7 @@
         <div class="colmd-5 mx-auto">
             <div class="card rounded-5">
                 <div class="card-header">
-                    <h4 class="mb-0">Creación masiva de usuarios</h4>
+                    <h4 class="mb-0"><i class="fas fa-random"></i> Creación masiva de usuarios</h4>
                 </div>
                 <div class="card-body" ng-show="!hecho">
                     <button type="button" class="btn btn-primary" ng-click="crear(10)">Crear 10 usuarios</button>
