--- a/app/compra/new/new.html
+++ b/app/compra/new/new.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Crear un Compra</h1>
+      <h1><i class="far fa-file"></i> Crear una Compra</h1>
       <form name="userForm" ng-show="!fallo&&!hecho">
         <div class="form-group row">
           <label for="cantidad" class="col-sm-2 col-form-label">Cantidad:</label>
