--- a/app/compra/plist/plist.html
+++ b/app/compra/plist/plist.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Listado de compra</h1>
+      <h1><i class="fas fa-stream"></i> {{titulo}}</h1>
+      <br>
       <div class="row">
         <div class="col">
           <nav aria-label="Paginación">
@@ -27,23 +28,26 @@
       </div>
       <table class="table">
         <tr>
-          <th>Id</th>
+          <th ng-show="authUsername.tipo_usuario_obj.id==1">Id</th>
           <th>Cantidad</th>
           <th>Producto</th>
-          <th>Factura</th>
+          <th ng-show="authUsername.tipo_usuario_obj.id==1">Factura</th>
           <th>Acciones</th>
         </tr>
         <tr ng-repeat="fila in pagina">
-          <td>{{ fila.id }}</td>
+          <td ng-show="authUsername.tipo_usuario_obj.id==1">{{ fila.id }}</td>
           <td>{{ fila.cantidad }}</td>
           <td>{{ fila.producto_obj.descripcion }}</td>
-          <td>{{ fila.factura_obj.id }}</td>
+          <td ng-show="authUsername.tipo_usuario_obj.id==1">{{ fila.factura_obj.id }}</td>
          
           <td>
-            <div class="btn-group" role="group" aria-label="Basic example">
+            <div class="btn-group" role="group" ng-show="authUsername.tipo_usuario_obj.id==1" aria-label="Basic example">
               <a class="btn btn-secondary" href="#!/compra/view/{{ fila.id }}"><i class="fas fa-eye"></i></a>
               <a class="btn btn-secondary" href="#!/compra/edit/{{ fila.id }}"><i class="fas fa-edit"></i></a>
               <a class="btn btn-secondary" href="#!/compra/remove/{{ fila.id }}"><i class="fas fa-trash-alt"></i></a>
+            </div>
+            <div class="btn-group" ng-show="authUsername.tipo_usuario_obj.id!=1" role="group" aria-label="Basic example">
+              <a class="btn btn-secondary"href="#!/compra/view/{{ fila.id }}"><i class="fas fa-eye"></i></a>
             </div>
           </td>
         </tr>
