--- a/app/factura/edit/edit.html
+++ b/app/factura/edit/edit.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Editar un Factura</h1>
+      <h1><i class="fas fa-edit"></i> Editar un Factura</h1>
       <form name="userForm" ng-show="!fallo&&!hecho">
         <div class="form-group row">
           <label for="id" class="col-sm-2 col-form-label">Id:</label>
