--- a/app/producto/plist/plist.html
+++ b/app/producto/plist/plist.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Listado de producto</h1>
+      <h1><i class="fas fa-stream"></i> Listado de producto</h1>
+      <br>
       <div class="row">
         <div class="col">
           <nav aria-label="Paginación">
@@ -25,47 +26,46 @@
           </nav>
         </div>
       </div>
-      <table class="table">
-        <tr>
-          <th>Id</th>
-          <th>Descripcion</th>
-          <th>Codigo</th>
-          <th>Existencias</th>
-          <th>Precio</th>
-          <th>Tipo producto</th>
-          <th>Imagen</th>
+    <table class="table">
+      <tr>
+        <th>Id</th>
+        <th>Descripcion</th>
+        <th>Codigo</th>
+        <th>Existencias</th>
+        <th>Precio</th>
+        <th>Tipo producto</th>
+        <th>Imagen</th>
 
-          <th>Acciones</th>
-        </tr>
-        <tr ng-repeat="fila in pagina">
-          <td>{{ fila.id }}</td>
-          <td>{{ fila.descripcion }}</td>
-          <td>{{ fila.codigo }}</td>
-          <td>{{ fila.existencias }}</td>
-          <td>{{ fila.precio }}</td>
-          <td>{{fila.tipo_producto_obj.descripcion}}</td>
-          <td>{{fila.imagen}}</td>
-          <td>
-            <div class="btn-group" role="group" aria-label="Basic example">
-              <a class="btn btn-secondary" href="#!/producto/view/{{ fila.id }}"><i class="fas fa-eye"></i></a>
-              <a class="btn btn-secondary" href="#!/producto/edit/{{ fila.id }}"><i class="fas fa-edit"></i></a>
-              <a class="btn btn-secondary" href="#!/producto/remove/{{ fila.id }}"><i class="fas fa-trash-alt"></i></a>
-            </div>
-          </td>
-        </tr>
-      </table>
+        <th>Acciones</th>
+      </tr>
+      <tr ng-repeat="fila in pagina">
+        <td>{{ fila.id }}</td>
+        <td>{{ fila.descripcion }}</td>
+        <td>{{ fila.codigo }}</td>
+        <td>{{ fila.existencias }}</td>
+        <td>{{ fila.precio }}</td>
+        <td>{{fila.tipo_producto_obj.descripcion}}</td>
+        <td><img src="{{fila.imagen}}" height="50px" width="50px"></td>
+        <td>
+          <div class="btn-group" role="group" aria-label="Basic example">
+            <a class="btn btn-secondary" href="#!/producto/view/{{ fila.id }}"><i class="fas fa-eye"></i></a>
+            <a class="btn btn-secondary" href="#!/producto/edit/{{ fila.id }}"><i class="fas fa-edit"></i></a>
+            <a class="btn btn-secondary" href="#!/producto/remove/{{ fila.id }}"><i class="fas fa-trash-alt"></i></a>
+          </div>
+        </td>
+      </tr>
+    </table>
 
-      <nav aria-label="Paginación">
-        <ul class="pagination">
-          <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
-            ng-repeat="p in botonera track by $index">
-            <a class="page-link" ng-if="p != '...'" href="#!/producto/plist/{{ rppActual }}/{{ p }}">{{ p }}
-            </a>
-            <span class="page-link" ng-if="p == '...'">{{ p }}</span>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <nav aria-label="Paginación">
+      <ul class="pagination">
+        <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
+          ng-repeat="p in botonera track by $index">
+          <a class="page-link" ng-if="p != '...'" href="#!/producto/plist/{{ rppActual }}/{{ p }}">{{ p }}
+          </a>
+          <span class="page-link" ng-if="p == '...'">{{ p }}</span>
+        </li>
+      </ul>
+    </nav>
   </div>
 </div>
 <ng-include src="'./app/footer.html'"></ng-include>
