--- a/app/tipo_usuario/plist/plist.html
+++ b/app/tipo_usuario/plist/plist.html
@@ -2,7 +2,7 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1>Listado de tipo_usuario</h1>
+      <h1><i class="fas fa-stream"></i> Listado de tipo_usuario</h1>
       <div class="row">
         <div class="col">
           <nav aria-label="Paginación">
