--- a/app/producto/new/new.html
+++ b/app/producto/new/new.html
@@ -65,7 +65,7 @@
                 ng-required="true" value="{{tipo_producto_descripcion}}" />              </div>
               </div>
         </div>
-        <cadd-modal-var class="modal fade" id="modalTipoProducto" idtipoproducto="tipo_producto_id" descripcion="tipo_producto_descripcion"></cadd-modal-var>
+        <tipoproductomodal class="modal fade" id="modalTipoProducto" idtipoproducto="tipo_producto_id" descripcion="tipo_producto_descripcion"></tipoproductomodal>
         <div class="form-group row">
           <label for="imagen" class="col-sm-2 col-form-label">Imagen:</label>
           <div class="col-sm-10">
