--- a/app/factura/selection/modal.html
+++ b/app/factura/selection/modal.html
@@ -37,12 +37,14 @@
                     <table class="table">
                       <tr>
                         <th>Id</th>
-                        <th>Nombre de usuario</th>
+                        <th>Fecha</th>
+                        <th>Usuario</th>
                         <th>Seleccionar</th>
                       </tr>
                       <tr ng-repeat="fila in pagina">
                         <td>{{ fila.id }}</td>
-                        <td>{{ fila.login }}</td>
+                        <td>{{ fila.fecha }}</td>
+                        <td>{{fila.usuario_obj.login}}</td>
                         <td>
                           <div class="btn-group" role="group" aria-label="Basic example">
                             <a class="btn btn-secondary"  data-dismiss="modal" ng-click="seleccionar(fila.id, fila.login)"><i class="fas fa-eye"></i></a>
