--- a/app/home/homeTemplate.html
+++ b/app/home/homeTemplate.html
@@ -19,7 +19,7 @@
         <p>Precio: {{producto.precio}}€</p>
         <form class="form-group row" id="cod_tipo">
           <div class="col-3"></div>
-          <input class="col-3" type="number" value=1 ng-model="cantidad" id="example-number-input">
+          <input class="col-3" type="number" value=1 min="0" ng-model="cantidad" id="example-number-input">
           <button type="button" class="btn btn-primary" ng-click="addCarrito(producto.id,cantidad)">Añadir al
             carrito</button>
         </form>
