--- a/app/menu.html
+++ b/app/menu.html
@@ -111,12 +111,12 @@
             class="fas fa-sign-in-alt"></i> Iniciar Sesión</a>
         </li>
         <li class="nav-item" ng-show="authStatus==200">
-          <span class="nav-link"><i class="fas fa-user"></i>
-            {{authUsername.nombre+" "+authUsername.apellido1+" "+authUsername.apellido2}}</span>
+          <a href="#!/usuario/view/{{authUsername.id}}" class="nav-link"><i class="fas fa-user"></i>
+            {{authUsername.nombre+" "+authUsername.apellido1+" "+authUsername.apellido2}}</a>
         </li>
         <li class="nav-item" ng-show="authStatus==200">
           <a class="nav-link" ng-class="{'active': sitio=='logout'}" href="#!/logout"><i
-            class="fas fa-sign-out-alt"></i> Cerrar Sesión</a>
+            class="fas fa-sign-out-alt"></i> Cerrar Sesió</a>
         </li>
       </ul>
     </div>
