Mitat master-Slave

--- a/app/menu.html
+++ b/app/menu.html
@@ -116,7 +116,7 @@
         </li>
         <li class="nav-item" ng-show="authStatus==200">
           <a class="nav-link" ng-class="{'active': sitio=='logout'}" href="#!/logout"><i
-            class="fas fa-sign-out-alt"></i> Cerrar Sesió</a>
+            class="fas fa-sign-out-alt"></i> Cerrar Sesión</a>
         </li>
       </ul>
     </div>
