--- a/app/producto/plist/plist.html
+++ b/app/producto/plist/plist.html
@@ -2,7 +2,8 @@
 <div class="container">
   <div class="row">
     <div class="col">
-      <h1><i class="fas fa-stream"></i> Listado de producto</h1>
+        <h1 ng-show="filter==null"><i class="fas fa-stream"></i> Listado de productos</h1>
+        <h1 ng-show="filter!=null"><i class="fas fa-stream"></i> Listado de {{pagina[0].tipo_producto_obj.descripcion}}</h1>
       <br>
       <div class="row">
         <div class="col">
@@ -10,7 +11,8 @@
             <ul class="pagination">
               <li class="page-item" ng-class="{'active':(paginaActual==p)}" ng-disabled="p == '...'"
                 ng-repeat="p in botonera track by $index">
-                <a class="page-link" ng-if="p != '...'" href="#!/producto/plist/{{ rppActual }}/{{ p }}">{{ p }}</a>
+                <a ng-show="filter==null" class="page-link" ng-if="p != '...'" href="#!/producto/plist/{{ rppActual }}/{{ p }}">{{ p }}</a>
+                <a ng-show="filter!=null" class="page-link" ng-if="p != '...'" href="#!/producto/plist/{{ rppActual }}/{{ p }}/{{filter}}">{{ p }}</a>
                 <span class="page-link" ng-if="p == '...'">{{ p }}</span>
               </li>
             </ul>
@@ -20,7 +22,8 @@
           <nav aria-label="Registros por página">
             <ul class="pagination float-right">
               <li class="page-item" ng-class="{'active':(rppActual==r)}" ng-repeat="r in rppS">
-                <a class="page-link" href="#!/producto/plist/{{ r }}/1">{{ r }}</a>
+                  <a ng-show="filter==null"class="page-link" href="#!/producto/plist/{{ r }}/1">{{ r }}</a>
+                  <a ng-show="filter!=null"class="page-link" href="#!/producto/plist/{{ r }}/1/{{filter}}">{{ r }}</a>
               </li>
             </ul>
           </nav>
