--- a/app/tipo_producto/plist/plist.html
+++ b/app/tipo_producto/plist/plist.html
@@ -29,13 +29,15 @@
         <tr>
           <th>Id</th>
           <th>Descripcion</th>
+          <th>Número de productos</th>
           <th>Acciones</th>
 
         </tr>
         <tr ng-repeat="fila in pagina">
           <td>{{ fila.id }}</td>
           <td>{{ fila.descripcion }}</td>
-        
+          <td><a href="#!/producto/plist/10/1/{{fila.id}}">{{ fila.link_producto}}</a></td>
+
          
           <td>
             <div class="btn-group" role="group" aria-label="Basic example">
