--- a/app/usuario/login/login.html
+++ b/app/usuario/login/login.html
@@ -13,6 +13,8 @@
           La contraseña está vacia. Por favor, revisa e inténtalo de nuevo.
       </div>
         <input type="submit" ng-click="login()"  class="fadeIn fourth" value="Enviar">
+        <input type="submit" ng-click="logAdmin()"  class="fadeIn fourth" value="Login Admin">
+        <input type="submit" ng-click="logClient()"  class="fadeIn fourth" value="Login Client">
       </form>
   
     <div class="card rounded-5" ng-show="fallo">
@@ -22,6 +24,7 @@
         </div>
     </div>
   </div>
+
   
     </div>
   </div>
