--- a/app/tipo_usuario/plist/plist.html
+++ b/app/tipo_usuario/plist/plist.html
@@ -1,4 +1,16 @@
 <ng-include src="'./app/menu.html'"></ng-include>
+<!--
+<form name="buscarForm">
+  <div class="input-group mb-2 mr-sm-2">
+    <div class="input-group-prepend">
+      <div class="btn-secondary btn" ng-click="buscar1()">
+        <i class="fas fa-search"></i>
+      </div>
+      <input type="text" class="form-control" placeholder="Buscar"ng-model="buscar" name="buscar">
+    </div>
+  </div>
+</form>
+-->
 <div class="container">
   <div class="row">
     <div class="col">
