--- a/app/producto/plist/plist.html
+++ b/app/producto/plist/plist.html
@@ -46,7 +46,7 @@
     <table class="table">
       <tr>
         <th>Id</th>
-        <th>Descripcion</th>
+        <th><a href="producto/plist/{{ r }}/1/{{filter}}/{{ buscar }}/descripcion">Descripcion  </a></th>
         <th>Codigo</th>
         <th>Existencias</th>
         <th>Precio</th>
