--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Prueba inicial de AngularJS</title>
+  <title>TrollEYES</title>
   <base href="/trollEYES-client-1/"> 
   <link rel="icon" href="favicon.ico" type="image/x-icon" />
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
